Fix: Increase width of calendar icons to preserve line breaks
Because the calendar stack column was too narrow, causing the next column to
bleed into it at smaller desktop screen sizes. This preserves the spacing
between those columns. It also makes the text inside the calendar look a bit
more evenly spaced across screen sizes.

Todo: I don't know why everything is in fractions. Evaluate the rationale for
that and maybe move towards whole numbers?

--- a/src/stylesheets/base/_layout.scss
+++ b/src/stylesheets/base/_layout.scss
@@ -104,7 +104,7 @@ footer {
 .calendar-stack {
     position: relative;
     display: inline-block;
-    width: (13em / 14);
+    width: (28em / 14);
     height: 1em;
     margin: $space-m;
     margin-top: $space-l;
@@ -118,7 +118,7 @@ footer {
 .calendar-day {
     top: (18em / 8);
     left: (8em / 8);
-    width: (19em / 8);
+    width: (24em / 8);
     height: (7em / 8);
     line-height: (14em / 14);
     text-align: center;
